; ModuleID = '/home/carl/AnghaBench/FFmpeg/tools/extr_qt-faststart.c_set_atom_size.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/tools/extr_qt-faststart.c_set_atom_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32, i32)* @set_atom_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_atom_size(i8* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %5, align 4
  switch i32 %7, label %17 [
    i32 8, label %8
    i32 16, label %12
  ]

8:                                                ; preds = %3
  %9 = load i8*, i8** %4, align 8
  %10 = load i32, i32* %6, align 4
  %11 = call i32 @AV_WB32(i8* %9, i32 %10)
  br label %17

12:                                               ; preds = %3
  %13 = load i8*, i8** %4, align 8
  %14 = getelementptr inbounds i8, i8* %13, i64 8
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @AV_WB64(i8* %14, i32 %15)
  br label %17

17:                                               ; preds = %3, %12, %8
  ret void
}

declare dso_local i32 @AV_WB32(i8*, i32) #1

declare dso_local i32 @AV_WB64(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
